--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,12 @@
     <button type="submit">Add Expense</button>
   </form>
 
-  
+  <h2>Expenses List</h2>
+  <ul>
+    <% expenses.forEach(expense => { %>
+      <li><%= expense.category %> - $<%= expense.amount.toFixed(2) %> - <%= expense.date.toISOString().split('T')[0] %> - <%= expense.description || 'No description' %></li>
+    <% }); %>
+  </ul>
+
 </body>
 </html>
