--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
   <title>Expense Tracker</title>
 </head>
 <body>
+  <h1>Deneb Villanueva C0872334</h1>
   <h1>Expense Tracker</h1>
 
   <form action="/add-expense" method="POST">
