--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,8 @@
 </head>
 <body>
   <h1>Deneb Villanueva StudentID C0872334</h1>
-  <h1>Expense Tracker</h1>
+  <h2>Date: Aug 7</h2>
+  <h2>Expense Tracker</h2>
 
   <form action="/add-expense" method="POST">
     <label for="category">Category:</label>
